added hover effect to über uns images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ layout: default
 
 {% include anfahrt.html %}
 
+{% include gallery.html %}
+
+
+<!--
 <div class="news">
 
   <h1 class="page-heading">News</h1>
@@ -25,3 +29,4 @@ layout: default
   </ul>
 
 </div>
+-->
