new landing page and footer

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@ layout: default
 
 {% include landing_page.html %}
 
+{% include oeffnungszeiten.html %}
+
 {% include ueberuns.html %}
 
-{% include anfahrt.html %}
+<!--{% include anfahrt.html %}--> 
 
 {% include gallery.html %}
 
